--- a/survey-front/package.json
+++ b/survey-front/package.json
@@ -81,7 +81,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "yarn test --watchAll=false && node scripts/build.js",
     "test": "node scripts/test.js --coverage"
   },
   "eslintConfig": {
